--- a/esqueci.css
+++ b/esqueci.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../bg.jpg");
+  background-image: url("bg.jpg");
   background-size: cover;
   background-position: center;
   font-family: Montserrat, sans-serif;
